<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".GameActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_block_border"
        android:paddingHorizontal="8dp"
        android:paddingVertical="8dp"
        android:stretchColumns="0, 1, 2, 3, 4"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnBlock1"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_border"
                android:fontFamily="@font/blanka_regular"
                android:text="@string/_1"
                android:textColor="#FFFFFF"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btnBlock2"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_border"
                android:fontFamily="@font/blanka_regular"
                android:text="@string/_2"
                android:textColor="#FFFFFF"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btnBlock3"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_border"
                android:fontFamily="@font/blanka_regular"
                android:text="@string/_3"
                android:textColor="#FFFFFF"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btnBlock4"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_border"
                android:fontFamily="@font/blanka_regular"
                android:text="@string/_4"
                android:textColor="#FFFFFF"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btnBlock5"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_border"
                android:fontFamily="@font/blanka_regular"
                android:text="@string/_5"
                android:textColor="#FFFFFF"
                android:textSize="40sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnBlock6"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_border"
                android:fontFamily="@font/blanka_regular"
                android:text="@string/_6"
                android:textColor="#FFFFFF"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btnBlock7"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_border"
                android:fontFamily="@font/blanka_regular"
                android:text="@string/_7"
                android:textColor="#FFFFFF"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btnBlock8"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_border"
                android:fontFamily="@font/blanka_regular"
                android:text="@string/_8"
                android:textColor="#FFFFFF"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btnBlock9"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_border"
                android:fontFamily="@font/blanka_regular"
                android:text="@string/_9"
                android:textColor="#FFFFFF"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btnBlock10"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_border"
                android:fontFamily="@font/blanka_regular"
                android:text="@string/_10"
                android:textColor="#FFFFFF"
                android:textSize="40sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnBlock11"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_border"
                android:fontFamily="@font/blanka_regular"
                android:text="@string/_11"
                android:textColor="#FFFFFF"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btnBlock12"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_border"
                android:fontFamily="@font/blanka_regular"
                android:text="@string/_12"
                android:textColor="#FFFFFF"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btnBlock13"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_border"
                android:fontFamily="@font/blanka_regular"
                android:text="@string/_13"
                android:textColor="#FFFFFF"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btnBlock14"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_border"
                android:fontFamily="@font/blanka_regular"
                android:text="@string/_14"
                android:textColor="#FFFFFF"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btnBlock15"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_border"
                android:fontFamily="@font/blanka_regular"
                android:text="@string/_15"
                android:textColor="#FFFFFF"
                android:textSize="40sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnBlock16"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_border"
                android:fontFamily="@font/blanka_regular"
                android:text="@string/_16"
                android:textColor="#FFFFFF"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btnBlock17"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_border"
                android:fontFamily="@font/blanka_regular"
                android:text="@string/_17"
                android:textColor="#FFFFFF"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btnBlock18"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_border"
                android:fontFamily="@font/blanka_regular"
                android:text="@string/_18"
                android:textColor="#FFFFFF"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btnBlock19"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_border"
                android:fontFamily="@font/blanka_regular"
                android:text="@string/_19"
                android:textColor="#FFFFFF"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btnBlock20"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_border"
                android:fontFamily="@font/blanka_regular"
                android:text="@string/_20"
                android:textColor="#FFFFFF"
                android:textSize="40sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnBlock21"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_border"
                android:fontFamily="@font/blanka_regular"
                android:text="@string/_21"
                android:textColor="#FFFFFF"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btnBlock22"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_border"
                android:fontFamily="@font/blanka_regular"
                android:text="@string/_22"
                android:textColor="#FFFFFF"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btnBlock23"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_border"
                android:fontFamily="@font/blanka_regular"
                android:text="@string/_23"
                android:textColor="#FFFFFF"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btnBlock24"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_border"
                android:fontFamily="@font/blanka_regular"
                android:text="@string/_24"
                android:textColor="#FFFFFF"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btnBlock25"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_border"
                android:fontFamily="@font/blanka_regular"
                android:text="@string/_25"
                android:textColor="#FFFFFF"
                android:textSize="40sp" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/textTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:paddingHorizontal="10dp"
        android:background="@drawable/timer_border"
        android:fontFamily="@font/digital"
        android:text="@string/_00_00_00"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="@+id/tableLayout" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/game_logo" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_button_stop"
        android:fontFamily="@font/blanka_regular"
        android:text="@string/stop"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/blanka_regular"
        android:text="@string/_1"
        android:textColor="#C8C8C8"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintStart_toStartOf="@+id/tableLayout" />

    <TextView
        android:id="@+id/textNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/blanka_regular"
        android:text="@string/_2"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/textNow"
        app:layout_constraintStart_toEndOf="@+id/textNow" />

    <TextView
        android:id="@+id/textNextNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/blanka_regular"
        android:text="@string/_3"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/textNext"
        app:layout_constraintStart_toEndOf="@+id/textNext" />
</androidx.constraintlayout.widget.ConstraintLayout>