<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="activity"
            type="com.wonjin.game1to50.MainActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginTop="56dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/game_logo" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="392dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="#00FFFFFF"
            android:gravity="end"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/btnStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginEnd="20dp"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:background="@drawable/rounded_button_border"
                android:fontFamily="@font/blanka_regular"
                android:text="@string/start"
                android:textColor="#FFFFFF"
                android:textSize="36sp" />

            <Button
                android:id="@+id/btnOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginEnd="40dp"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:background="@drawable/rounded_button_border"
                android:fontFamily="@font/blanka_regular"
                android:text="@string/option"
                android:textColor="#FFFFFF"
                android:textSize="36sp" />

            <Button
                android:id="@+id/btnHighScores"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginEnd="60dp"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:background="@drawable/rounded_button_border"
                android:fontFamily="@font/blanka_regular"
                android:text="@string/high_scores"
                android:textColor="#FFFFFF"
                android:textSize="36sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/made_by_robin_lim"
            android:textColor="#AEAEAE"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>